edited end points

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>JavaInUse Chat Application | JavaInUse</title>
+    <title>chatone-live</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link
             href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
@@ -34,7 +34,7 @@
 <div id="dialogue-page" class="hidden">
     <div class="dialogue-container">
         <div class="dialogue-header">
-            <h2>JavaInUse Chat Application</h2>
+            <h2>ChatOne Live</h2>
         </div>
         <ul id="messageList">
 
