--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,60 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>chatone-live</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link
-            href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
-            rel="stylesheet" id="bootstrap-css">
-    <script
-            src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Spring Boot WebSocket Chat Application</title>
+    <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
+<noscript>
+    <h2>Sorry! Your browser doesn't support Javascript</h2>
+</noscript>
 
-<div id="welcome-page">
-    <div class="welcome-page-container">
-        <h1 class="title">Welcome - To join the chat group enter your
-            name</h1>
-        <form id="welcomeForm" name="welcomeForm">
+<div id="username-page">
+    <div class="username-page-container">
+        <h1 class="title">Type your username</h1>
+        <form id="usernameForm" name="usernameForm">
             <div class="form-group">
-                <input type="text" id="name" placeholder="name"
-                       class="form-control" />
+                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
             </div>
             <div class="form-group">
-                <button type="submit" onclass="accent username-submit">Lets
-                    Begin</button>
+                <button type="submit" class="accent username-submit">Start Chatting</button>
             </div>
         </form>
     </div>
 </div>
 
-
-<div id="dialogue-page" class="hidden">
-    <div class="dialogue-container">
-        <div class="dialogue-header">
-            <h2>ChatOne Live</h2>
+<div id="chat-page" class="hidden">
+    <div class="chat-container">
+        <div class="chat-header">
+            <h2>Chat1 Live</h2>
         </div>
-        <ul id="messageList">
+        <div class="connecting">
+            Connecting...
+        </div>
+        <ul id="messageArea">
 
         </ul>
-        <form id="dialogueForm" name="dialogueForm" nameForm="dialogueForm">
+        <form id="messageForm" name="messageForm">
             <div class="form-group">
                 <div class="input-group clearfix">
-                    <input type="text" id="chatMessage"
-                           placeholder="Enter a message...." autocomplete="off"
-                           class="form-control" />
-                    <button type="submit" class="glyphicon glyphicon-share-alt">Send</button>
+                    <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+                    <button type="submit" class="primary">Send</button>
                 </div>
             </div>
         </form>
     </div>
 </div>
-<script
-        src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
-<script
-        src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<script src="/js/script.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
